tests/NormalTests/paczka1/fuzzy1/74242484.err
Error in line 5: S789 S789 -1,8
Error in line 6: S789 S789 41,49
Error in line 2: S789 S789 17,7
Error in line 11: aNr A481 0,5
Error in line 20: YUYoINA S789 14,1
Error in line 25: YUYoINA A433 7,1
